--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "description": "1. Fork the repository to your own Github account. 2. Clone your fork to your own machine. 3. Navigate to the clone on your machine and run `npm install`",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./lib/server.js"
+    "lint": "eslint --ignore-path .gitignore . || exit 0",
+    "test": "NODE_ENV=test istanbul cover _mocha",
+    "dev": "NODE_ENV=development node ./lib/index.js",
+    "start": "node ./lib/index.js",
+    "jspm": "jspm",
+    "postinstall": "jspm install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.0",
+    "body-parser": "^1.16.0",
     "express": "^4.13.4",
-    "jade": "^1.11.0"
+    "jspm": "^0.16.45",
+    "morgan": "^1.8.0",
+    "pug": "^2.0.0-beta11"
   },
   "devDependencies": {
-    "mocha": "^3.2.0"
+    "eslint": "^3.15.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.1.2",
+    "supertest": "^3.0.0"
   }
 }
