--- a/package.json
+++ b/package.json
@@ -26,5 +26,18 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
     "supertest": "^3.0.0"
+  },
+  "jspm": {
+    "directories": {
+      "baseURL": "public"
+    },
+    "dependencies": {
+      "bootstrap": "github:twbs/bootstrap@^3.3.7",
+      "css": "github:systemjs/plugin-css@^0.1.27",
+      "jquery": "npm:jquery@^3.1.0"
+    },
+    "devDependencies": {
+      "typescript": "npm:typescript@^1.6.2"
+    }
   }
 }
