--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ignore-path .gitignore .",
-    "test": "NODE_ENV=test istanbul cover _mocha",
+    "nyc": "NODE_ENV=test nyc mocha",
+    "test": "npm run lint && npm run nyc",
     "dev": "NODE_ENV=development node ./lib/index.js",
     "start": "node ./lib/index.js",
-    "jspm": "jspm",
-    "postinstall": "jspm install",
-    "coverage-report": "opn coverage/lcov-report/index.html"
+    "coverage": "opn coverage/lcov-report/index.html"
   },
   "keywords": [],
   "author": "",
@@ -18,28 +17,32 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.13.4",
-    "jspm": "^0.16.45",
     "morgan": "^1.8.0",
     "pug": "^2.0.0-beta11"
   },
   "devDependencies": {
+    "bootstrap": "^3.3.7",
+    "bootstrap-webpack": "0.0.6",
+    "bootstrap-sass": "^3.3.7",
+    "css-loader": "^0.28.4",
     "eslint": "^3.15.0",
-    "istanbul": "^0.4.5",
+    "exports-loader": "^0.6.4",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "imports-loader": "^0.7.1",
+    "jquery": "^3.2.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
     "mocha": "^3.1.2",
+    "node-sass": "^4.5.3",
+    "nyc": "^10.3.2",
     "opn-cli": "^3.1.0",
-    "supertest": "^3.0.0"
-  },
-  "jspm": {
-    "directories": {
-      "baseURL": "public"
-    },
-    "dependencies": {
-      "bootstrap": "github:twbs/bootstrap@^3.3.7",
-      "css": "github:systemjs/plugin-css@^0.1.32",
-      "jquery": "npm:jquery@^3.1.1"
-    },
-    "devDependencies": {
-      "typescript": "npm:typescript@^2.0.7"
-    }
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.1",
+    "supertest": "^3.0.0",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.6.1",
+    "webpack-dev-middleware": "^1.10.2"
   }
 }
